# realtime-modelling

./: .gitignore  README.md  bootstrap-postgresql.sql  bootstrap.sql  docker-compose.yml  main.py  pyproject.toml  test-run.sql
models/: users_animals_counts.sql  users_animals_counts_history.sql  users_animals_species_counts.sql
